# low-level-design

./: .gitignore  LICENSE  README.md
cpp/: CMakeLists.txt  README.md
cpp/cache/: CMakeLists.txt  README.md
cpp/cache/cache/: IEvictionPolicy.h  IStorage.h  KeyValueStore.h  KeyValueStoreFactory.h  LFUPolicy.h  LRUPolicy.h  UnorderedMapStorage.h  main.cpp
cpp/key-value-store/: CMakeLists.txt
cpp/key-value-store/key-value-store/: AttributeValue.cpp  AttributeValue.h  Dictionary.cpp  Dictionary.h  KeyValueStore.h  main.cpp
cpp/messaging-queue/: CMakeLists.txt
cpp/messaging-queue/messaging-queue/: ISubscriber.h  Message.cpp  Message.h  Queue.cpp  Queue.h  Subscriber.cpp  Subscriber.h  ThreadPool.h  Topic.cpp  Topic.h  TopicSubscriber.cpp  TopicSubscriber.h  main.cpp
cpp/parking-lot/: CMakeLists.txt
cpp/parking-lot/parking-lot/: Helpers.cpp  Helpers.h  ParkingFloor.cpp  ParkingFloor.h  ParkingFloorConfiguration.cpp  ParkingFloorConfiguration.h  ParkingLot.cpp  ParkingLot.h  ParkingService.cpp  ParkingService.h  ParkingSlot.cpp  ParkingSlot.h  ParkingSlotContainer.cpp  ParkingSlotContainer.h  ParkingSlotType.cpp  ParkingSlotType.h  Ticket.cpp  Ticket.h  Vehicle.cpp  Vehicle.h  main.cpp
cpp/tic-tac-toe/: CMakeLists.txt  build.sh
cpp/tic-tac-toe/tic-tac-toe/: Board.cpp  Board.h  Board.test.cpp  Piece.cpp  Piece.h  Piece.test.cpp  Player.cpp  Player.h  Player.test.cpp  TicTacToe.cpp  TicTacToe.h  main.cpp  main.test.cpp
py/cab-booking/: main.py  managers.py  models.py  strategies.py
py/meeting-booking/: main.py
py/meeting-booking/meeting/: meeting.py  meeting_manager.py  room.py  strategies.py
py/splitwise/: main.py  requirements.txt
py/splitwise/app/: expense.py  expense_manager.py  helpers.py  ledger.py
